force-app/main/default/objects/Property__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <description>the listed sale price of home</description>
    <label>price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>