force-app/main/default/objects/Property__c/fields/Offer_amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_amount__c</fullName>
    <label>Offer amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>