force-app/main/default/objects/Property__c/fields/street_address__c.field-meta.xml
<CustomField>
    <fullName>street_address__c</fullName>
    <label>street address</label>
    <type>TextArea</type>
</CustomField>